WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38455
Does not work on SPARC because of alignment issues
https://bugs.webkit.org/show_bug.cgi?id=38455
Summary
Does not work on SPARC because of alignment issues
Gustavo Noronha (kov)
Reported
2010-05-03 05:46:42 PDT
When running a simple WebKit-based tool that generates GObject introspection files (this is part of the build process), the program crashes with a SIGBUS in pageheap_memory. Mike Hommey from Debian has a patch to fix this issue.
Attachments
patch from Debian
(1.60 KB, patch)
2010-05-03 05:49 PDT
,
Gustavo Noronha (kov)
darin
: review-
darin
: commit-queue-
Details
Formatted Diff
Diff
patch suggested by Darin
(1.80 KB, patch)
2010-05-03 10:35 PDT
,
Gustavo Noronha (kov)
darin
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gustavo Noronha (kov)
Comment 1
2010-05-03 05:49:40 PDT
Created
attachment 54918
[details]
patch from Debian Mike Hommey sent this patch to me. I took the liberty of doing the changelogging for him.
WebKit Review Bot
Comment 2
2010-05-03 05:51:15 PDT
Attachment 54918
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 JavaScriptCore/wtf/FastMalloc.cpp:2332: pageheap_memory is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 1 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2010-05-03 08:25:08 PDT
Comment on
attachment 54918
[details]
patch from Debian This should use AllocAlignementInteger rather than uint64_t.
Gustavo Noronha (kov)
Comment 4
2010-05-03 10:35:01 PDT
Created
attachment 54938
[details]
patch suggested by Darin Here it is!
WebKit Review Bot
Comment 5
2010-05-03 10:35:48 PDT
Attachment 54938
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 JavaScriptCore/wtf/FastMalloc.cpp:2332: pageheap_memory is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 1 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 6
2010-05-03 21:11:55 PDT
Comment on
attachment 54938
[details]
patch suggested by Darin Rejecting patch 54938 from commit-queue. Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See:
http://webkit.org/coding/contributing.html
Chris Jerdonek
Comment 7
2010-05-03 23:21:34 PDT
(In reply to
comment #6
)
> (From update of
attachment 54938
[details]
) > Rejecting patch 54938 from commit-queue. > > Found no modified ChangeLogs, cannot create a commit message. > All changes require a ChangeLog. See: >
http://webkit.org/coding/contributing.html
This should work now if you cq+ it again. There was a regression in svn-apply that affected e-mailed diffs:
https://bugs.webkit.org/show_bug.cgi?id=38507
Gustavo Noronha (kov)
Comment 8
2010-05-04 05:34:52 PDT
Landed manually as
r58753
.
Brian Koehmstedt
Comment 9
2010-05-06 09:46:11 PDT
I was observing this problem on Solaris 10 x86_64 as well, and I can confirm
r58753
fixes the problem on x86_64.
Gustavo Noronha (kov)
Comment 10
2010-05-07 08:20:43 PDT
(In reply to
comment #9
)
> I was observing this problem on Solaris 10 x86_64 as well, and I can confirm >
r58753
fixes the problem on x86_64.
Great news! =)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug